--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,6 +8,10 @@
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  	<p><%= link_to "Tieng Viet", '?locale=vn' %></p>
+  	<p><%= link_to "English", '?locale=en' %></p>
+  	<h1><%=t :hello_world %></h1>
+	<h1><%= flash[:notice] %></h1>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"),
