--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,17 @@
 <div class="center jumbotron">
   <h1>Welcome to the Sample App</h1>
-
   <h2>
     This is the home page for the
     <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
     sample application.
   </h2>
-
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to t("signup"), signup_path, class: "btn btn-lg btn-primary" %>
+  <p>
+  <%= link_to_unless I18n.locale == :en, "English", locale: :en %>
+  |
+  <%= link_to_unless I18n.locale == :vn, "VietNam", locale: :vn %>
+  </p>
+    <h1><%=t :hello_world %></h1>
+  <h1><%= flash[:notice] %></h1>
 </div>
-
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
+<%= link_to image_tag("rails.png", alt: "Rails logo"), "http://rubyonrails.org/" %>
