--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
     sample application.
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to t("signup"), signup_path, class: "btn btn-lg btn-primary" %>
   	<p>
 	<%= link_to_unless I18n.locale == :en, "English", locale: :en %>
 	|
