--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,5 +17,4 @@
 	<h1><%= flash[:notice] %></h1>
 </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
+<%= link_to image_tag("rails.png", alt: "Rails logo"),'http://rubyonrails.org/' %>
