--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -75,6 +75,21 @@ footer ul li {
   margin-left: 15px;
 }
 
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
+
 $gray-medium-light: #eaeaea;
 
 @mixin box_sizing {
@@ -88,9 +103,7 @@ $gray-medium-light: #eaeaea;
   float: left;
   width: 100%;
   margin-top: 45px;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+  @include box_sizing;
 }
 
 aside {
