--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,8 +8,7 @@
       <li><%= link_to "About",   about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
       <li><%= link_to_unless I18n.locale == :en, "English", locale: :en %></li>
-      <li><%= link_to_unless I18n.locale == :vn, "Tieng Viet", locale: :vn %>
-  </p></li>
+      <li><%= link_to_unless I18n.locale == :vn, "Tieng Viet", locale: :vn %></li>
       <li><a href="http://news.railstutorial.org/">News</a></li>
     </ul>
   </nav>
