--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
 
+<% provide :title, t("layouts.users.signup") %>
+<h1><%=t "layouts.users.signup" %></h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user, url: signup_path) do |f| %>
-      <%= render 'shared/error_messages' %>
+    <%= form_for @user, url: signup_path do |f| %>
+      <%= render "shared/error_messages" %>
 
       <%= f.label :name %>
       <%= f.text_field :name %>
@@ -15,7 +15,7 @@
       <%= f.label :password %>
       <%= f.password_field :password %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, t("layouts.users.confirmation") %>
       <%= f.password_field :password_confirmation %>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
